@@ -4,6 +4,8 @@ Date: ???
   Changes:
     - Recipe unlocks are now organized into hidden technologies
     - Better quality probabilities description
+  Bug fixes:
+    - Support tiles that are minable but return nothing
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 2023.11.07
